--- a/index.html
+++ b/index.html
@@ -136,6 +136,11 @@
        </div>
 
 </section>
+
+<section id="word-container" class="bg-gray-100 p-10 w-11/12 mx-auto my-10 grid grid-cols-1 md:grid-cols-3 gap-5 rounded-xl  ">
+   
+</section>
+
 <script src="./script/index.js"></script>
 
 </body>
