--- a/index.html
+++ b/index.html
@@ -126,9 +126,12 @@
 </section>
 
 <section>
+<!--   
+          <img class= "mx-auto" src = "./assets/alert-error.png"/>
+
        <h2 class="text-4xl font-bold mb-8 text-center">
         <span class="text-sky-400">Let's</span> Learn Vocabulary
-       </h2>
+       </h2> -->
 
        <div id="container" class="flex gap-5 flex-wrap justify-center">
 
