--- a/index.html
+++ b/index.html
@@ -144,6 +144,24 @@
    
 </section>
 
+<!-- Open the modal using ID.showModal() method -->
+<!-- <button class="btn" onclick="my_modal_1.showModal()">open modal</button> -->
+<dialog id="my_modal_1" class="modal">
+  <div class="modal-box">
+<div id="detailscontainer">
+
+  
+</div>
+
+</div>
+    <div class="modal-action">
+      <form method="dialog">
+        <!-- if there is a button in form, it will close the modal -->
+        <button class="btn">Close</button>
+      </form>
+    </div>
+  </div>
+</dialog>
 <script src="./script/index.js"></script>
 
 </body>
