--- a/index.html
+++ b/index.html
@@ -140,6 +140,12 @@
 
 </section>
 
+
+<section class="flex justify-center items-center py-10 ">
+<span id="spinner" class="hidden loading loading-bars loading-md"></span>
+
+</section>
+
 <section id="word-container" class="bg-gray-100 p-10 w-11/12 mx-auto my-10 grid grid-cols-1 md:grid-cols-3 gap-5 rounded-xl  ">
    
 </section>
@@ -148,7 +154,7 @@
 <!-- <button class="btn" onclick="my_modal_1.showModal()">open modal</button> -->
 <dialog id="my_modal_1" class="modal">
   <div class="modal-box">
-<div id="detailscontainer">
+<div id="detailscontainer" class="space-y-5">
 
   
 </div>
