--- a/index.html
+++ b/index.html
@@ -145,13 +145,44 @@
 <span id="spinner" class="hidden loading loading-bars loading-md"></span>
 
 </section>
+<section class="flex justify-center">
+  <div class="join">
+  <div>
+    <label class="input validator join-item">
+      <!-- <svg class="h-[1em] opacity-50" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"> -->
+        <g
+          stroke-linejoin="round"
+          stroke-linecap="round"
+          stroke-width="2.5"
+          fill="none"
+          stroke="currentColor"
+        >
+          <rect width="20" height="16" x="2" y="4" rx="2"></rect>
+          <path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path>
+        </g>
+      </svg>
+      <input id="input-search" type="email" placeholder="Search Vocabulary" required />
+    </label>
+    <div class="validator-hint hidden">Enter valid email address</div>
+  </div>
+  <button id="btn-search" class="btn btn-primary join-item">Search</button>
+</div>
+</section>
 
 <section id="word-container" class="bg-gray-100 p-10 w-11/12 mx-auto my-10 grid grid-cols-1 md:grid-cols-3 gap-5 rounded-xl  ">
    
 </section>
 
+<section>
+  
+</section>
+
+
+
+
+
 <!-- Open the modal using ID.showModal() method -->
-<!-- <button class="btn" onclick="my_modal_1.showModal()">open modal</button> -->
+<!-- <button class="btn" oncQAlick="my_modal_1.showModal()">open modal</button> -->
 <dialog id="my_modal_1" class="modal">
   <div class="modal-box">
 <div id="detailscontainer" class="space-y-5">
